--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,4 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="https://rewarecdn.a1motion.com/intramural/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://rewarecdn.a1motion.com/intramural/icon.png?width=180" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://rewarecdn.a1motion.com/intramural/icon.png?width=32" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://rewarecdn.a1motion.com/intramural/icon.png?width=16" />
+  <title>Intramural</title>
+</head>
 
 <body>
   <div id="root"></div>
