update header styles

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" sizes="180x180" href="https://rewarecdn.a1motion.com/intramural/logo.png?width=180" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://rewarecdn.a1motion.com/intramural/icon.png?width=32" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://rewarecdn.a1motion.com/intramural/logo.png?width=32" />
   <link rel="icon" type="image/png" sizes="16x16" href="https://rewarecdn.a1motion.com/intramural/logo.png?width=16" />
   <title>Intramural</title>
 </head>
